Added spelo, youtube

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
   <html>
     <head>
-      
+      <title>Pokihub</title>
     </head>
     <body>
-      <a href="https://ww.poki.com">Poki</a>
+      <a href="https://www.poki.com" target="_blank">Poki</a>
+      <a href="https://www.spelo.se">Spelo</a>
+      <a href="https://www.youtube.com">Youtube</a>
     </body>
   </html>
