--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
       <a href="https://www.poki.com" target="_blank">Poki</a>
-      <a href="https://www.spelo.se"></Spelo></a>
+      <a href="https://www.spelo.se">Spelo</a>
       <a href="https://www.youtube.com">Youtube</a>
     </body>
   </html> 
