--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     </head>
     <body>
       <a href="https://www.poki.com" target="_blank">Poki</a>
-      <a href="https://www.spelo.se">Spelo</a>
-      <a href="https://www.youtube.com">Youtube</a>
+      <a href="https://www.spelo.se" target="_blank">Spelo</a>
+      <a href="https://www.youtube.com" target="_blank">Youtube</a>
+      <a href="https://www.y8.com" target="blank">Y8</a>
     </body>
   </html> 
