--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
       <title>Pokihub</title>
     </head>
     <body>
-      <a href="https://www.poki.com" target="_blank">Poki</a>
-      <a href="https://www.spelo.se" target="_blank">Spelo</a>
+      <a href
+      <a href
       <a href="https://www.youtube.com" target="_blank">Youtube</a>
       <a href="https://www.y8.com" target="blank">Y8</a>
     </body>
