--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
       <a href
       <a href
       <a href="https://www.youtube.com" target="_blank">Youtube</a>
-      <a href href="https://www.y8.com" target="blank"
+      <a href href="https://www.y8.com" target="blank¨y8
     </body>
   </html> 
