--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
       <a href="https://www.youtube.com" target="_blank">Youtube</a>
-      <a href href="https://www.y8.com" target="blank¨y8
+      <a href="https://www.y8.com" target="_blank">Y8</a>
     </body>
   </html> 
